Setup basic tests

--- a/tasks/BUILD
+++ b/tasks/BUILD
@@ -4,7 +4,9 @@ shell_binary(
     name = "ci",
     srcs = ["src/ci.sh"],
     data = [
+        ":build",
         ":lint",
+        ":test",
     ],
     tags = ["manual"],
     deps = [
@@ -15,6 +17,36 @@ shell_binary(
 shell_binary(
     name = "lint",
     srcs = ["src/lint.sh"],
+    tags = ["manual"],
+    deps = [
+        "@bazel_tools//tools/bash/runfiles",
+    ],
+)
+
+shell_binary(
+    name = "build",
+    srcs = ["src/build.sh"],
+    tags = ["manual"],
+    deps = [
+        "@bazel_tools//tools/bash/runfiles",
+    ],
+)
+
+shell_binary(
+    name = "test",
+    srcs = ["src/test.sh"],
+    data = [
+        ":sync-workspace-tests",
+    ],
+    tags = ["manual"],
+    deps = [
+        "@bazel_tools//tools/bash/runfiles",
+    ],
+)
+
+shell_binary(
+    name = "sync-workspace-tests",
+    srcs = ["src/sync-workspace-tests.sh"],
     tags = ["manual"],
     deps = [
         "@bazel_tools//tools/bash/runfiles",
