--- a/tests/workspaces/shellcheck/from_host_path/WORKSPACE
+++ b/tests/workspaces/shellcheck/from_host_path/WORKSPACE
@@ -1,8 +1,8 @@
 local_repository(
-    name = "rules_adroit",
+    name = "misc_rules",
     path = "../../../../",
 )
 
 register_toolchains(
-    "@rules_adroit//toolchains:shellcheck_from_host_path",
+    "@misc_rules//toolchains:shellcheck_from_host_path",
 )
