--- a/tests/workspaces/yamllint/from_nixpkgs/WORKSPACE
+++ b/tests/workspaces/yamllint/from_nixpkgs/WORKSPACE
@@ -1,5 +1,5 @@
 local_repository(
-    name = "rules_adroit",
+    name = "misc_rules",
     path = "../../../../",
 )
 
@@ -19,7 +19,7 @@ load(
 
 nixpkgs_local_repository(
     name = "nixpkgs",
-    nix_file = "@rules_adroit//3rdparty:nixpkgs.nix",
+    nix_file = "@misc_rules//3rdparty:nixpkgs.nix",
 )
 
 nixpkgs_package(
@@ -29,5 +29,5 @@ nixpkgs_package(
 )
 
 register_toolchains(
-    "@rules_adroit//toolchains:yamllint_from_nixpkgs",
+    "@misc_rules//toolchains:yamllint_from_nixpkgs",
 )
