Add a shellcheck path toolchain

--- a/toolchains/BUILD
+++ b/toolchains/BUILD
@@ -46,6 +46,44 @@ toolchain(
     visibility = ["//visibility:public"],
 )
 
+# shellcheck from a SHELLCHECK_PATH env var pointing to
+# the shellcheck binary
+
+genrule(
+    name = "_shellcheck_path_shellcheck_script",
+    outs = ["shellcheck_path_shellcheck.sh"],
+    cmd = "\n".join([
+        "cat <<'EOF' > $@",
+        "#!/usr/bin/env bash",
+	"if [ -z $${SHELLCHECK_PATH+x} ]; then",
+	"  echo \"SHELLCHECK_PATH must be set!\"",
+	"  exit 1",
+	"else",
+        "  eval \"$$SHELLCHECK_PATH\" \"\$$@\"",
+	"fi",
+        "EOF",
+    ]),
+)
+
+sh_binary(
+    name = "_shellcheck_path_shellcheck",
+    srcs = [":_shellcheck_path_shellcheck_script"],
+    visibility = ["//visibility:public"],
+)
+
+shellcheck_toolchain(
+    name = "_shellcheck_from_shellcheck_path",
+    shellcheck = "@misc_rules//toolchains:_shellcheck_path_shellcheck",
+    visibility = ["//visibility:public"],
+)
+
+toolchain(
+    name = "shellcheck_from_shellcheck_path",
+    toolchain = ":_shellcheck_from_shellcheck_path",
+    toolchain_type = "@misc_rules//rules/shellcheck:toolchain_type",
+    visibility = ["//visibility:public"],
+)
+
 # yamllint
 
 yamllint_toolchain(
