--- a/tests/workspaces/from_tool_path_var/WORKSPACE
+++ b/tests/workspaces/from_tool_path_var/WORKSPACE
@@ -1,6 +1,11 @@
 local_repository(
+    name = "shared",
+    path = "../shared",
+)
+
+local_repository(
     name = "misc_rules",
-    path = "../../../../",
+    path = "../../../",
 )
 
 register_toolchains(
