--- a/tests/workspaces/shared/WORKSPACE
+++ b/tests/workspaces/shared/WORKSPACE
@@ -1,6 +1,6 @@
 local_repository(
     name = "misc_rules",
-    path = "../../../../",
+    path = "../../../",
 )
 
 load("@misc_rules//:workspace0.bzl", "workspace0")
@@ -14,11 +14,17 @@ workspace1()
 load("@io_tweag_rules_nixpkgs//nixpkgs:nixpkgs.bzl", "nixpkgs_package")
 
 nixpkgs_package(
+    name = "shellcheck",
+    repository = "@nixpkgs",
+)
+
+nixpkgs_package(
     name = "yamllint",
     attribute_path = "python36Packages.yamllint",
     repository = "@nixpkgs",
 )
 
 register_toolchains(
+    "@misc_rules//toolchains:shellcheck_from_nixpkgs",
     "@misc_rules//toolchains:yamllint_from_nixpkgs",
 )
