add black for python

--- a/tests/workspaces/from_tool_path_var/WORKSPACE
+++ b/tests/workspaces/from_tool_path_var/WORKSPACE
@@ -10,4 +10,5 @@ local_repository(
 
 register_toolchains(
     "@misc_rules//toolchains:shellcheck_from_shellcheck_path",
+    "@misc_rules//toolchains:black_from_black_path",
 )
